# Venlta

./: .gitignore  README.md  README_EN.md  build.ps1  build.sh  fix.md  generate_icons.py  pyproject.toml  requirements.txt  worklog.md
.github/workflows/: build.yml
backend/: main.py  tray.py
backend/bridge/: result.py  signals.py  venlta_bridge.py
backend/core/: auto_updater.py  config_manager.py  database.py  port_detector.py  singbox_manager.py  speed_tester.py  stats_collector.py  subscription.py  system_proxy.py  tun_elevator.py
backend/utils/: constants.py  crypto.py  helpers.py  i18n.py  logger.py  platform.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx  router.ts
frontend/src/components/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Switch.tsx  Table.tsx  Toast.tsx  TrafficChart.tsx  index.ts
frontend/src/i18n/: en.json  index.ts  useTranslation.ts  zh.json
frontend/src/lib/: api.ts  bridge-result.ts  dom.ts  format.ts  icons.tsx  qwebchannel.js  shallow-equal.ts
frontend/src/pages/dashboard/: index.tsx
frontend/src/pages/logs/: index.tsx
frontend/src/pages/nodes/: index.tsx
frontend/src/pages/rules/: index.tsx
frontend/src/pages/settings/: index.tsx
frontend/src/stores/: logStore.ts  nodeStore.ts  proxyStore.ts  statsStore.ts  toastStore.ts  uiStore.ts
frontend/src/types/: group.d.ts  node.d.ts  proxy.d.ts  rule.d.ts  settings.d.ts  subscription.d.ts
frontend/styles/: main.css
resources/polkit/: io.venlta.policy
