[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venlta"
version = "0.1.0"
description = "A lightweight, beautiful, and secure proxy client based on sing-box"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Venlta Development Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PySide6>=6.6.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == \"win32\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "ruff>=0.1.0",
]
nuitka = [
    "nuitka>=1.9.0",
    "ordered-set>=4.1.0",
]

[project.scripts]
venlta = "backend.main:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
